Fix table margin (wrapping table doubled up margin)

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -1,23 +1,29 @@
-.o-techdocs-table-wrapper {
-  overflow: auto;
-}
 
-.o-techdocs-content table {
-  border-collapse: collapse;
-  border: 1px solid $o-techdocs-color-grey2;
-  margin: 1em 0;
+.o-techdocs-content {
+  table {
+    border-collapse: collapse;
+    border: 1px solid $o-techdocs-color-grey2;
+    margin: 1em 0;
 
-  > thead > tr > td,
-  > tbody > tr > td,
-  > thead > tr > th,
-  > tbody > tr > th {
-    @extend %o-techdocs-font;
-    padding: 10px 6px;
-    border-bottom: 1px solid $o-techdocs-color-grey2;
-    text-align: left;
+    > thead > tr > td,
+    > tbody > tr > td,
+    > thead > tr > th,
+    > tbody > tr > th {
+      @extend %o-techdocs-font;
+      padding: 10px 6px;
+      border-bottom: 1px solid $o-techdocs-color-grey2;
+      text-align: left;
+    }
+    > thead > tr > th,
+    > tbody > tr > th {
+      background-color: $o-techdocs-color-grey2;
+    }
   }
-  > thead > tr > th,
-  > tbody > tr > th {
-    background-color: $o-techdocs-color-grey2;
+  > .o-techdocs-table-wrapper {
+    overflow: auto;
+    margin: 1em 0;
+    > table {
+      margin: 0;
+    }
   }
 }
